2003-10-20  Rodrigo Moya <rodrigo@ximian.com>

	* gui/gnome-cal.[ch] (gnome_calendar_add_event_uri): renamed
	from gnome_calendar_open.

	* gui/calendar-component.c (load_uri_for_source): call
	gnome_calendar_add_event_uri instead of setting the URI property on
	the Bonobo control.

2003-10-17  Rodrigo Moya <rodrigo@ximian.com>

	* gui/migration.c (process_calendar_dir): process subfolders.

2003-10-17  Rodrigo Moya <rodrigo@ximian.com>

	* gui/migration.[ch] (migrate_old_calendars): new function.

	* gui/calendar-component.c (calendar_component_init): call
	the above function to migrate from old setups.

	* gui/Makefile.am: added new files.

2003-10-17  Jeffrey Stedfast <fejj@ximian.com>
	
	* conduits/calendar/Makefile.am: Fixed for libical build changes.

	* conduits/todo/Makefile.am: Same.

2003-10-17  Rodrigo Moya <rodrigo@ximian.com>

	* gui/e-cal-view.c (on_print): call
	e_cal_view_get_visible_time_range, not the gnome_calendar_
	version.
	(e_cal_view_new_appointment_for, e_cal_view_new_appointment,
	e_cal_view_edit_appointment): new functions.

	* gui/gnome-cal.[ch] (gnome_calendar_new_appointment_for,
	gnome_calendar_new_appointment, gnome_calendar_edit_object):
	removed these functions, now available in e-cal-view.

	* gui/calendar-commands.c:
	* gui/e-day-view.c:
	* gui/e-week-view-event-item.c:
	* gui/e-week-view.c: replaced calls to gnome_calendar_* with
	e_cal_view_* equivalents.

2003-10-17  Rodrigo Moya <rodrigo@ximian.com>

	* gui/e-cal-view.[ch] (e_cal_view_get_default_category):
	(e_cal_view_set_default_category): new functions.
	(e_cal_view_destroy): free the default_category field.

	* gui/e-day-view.[ch] (e_day_view_set_default_category):
	removed obsolete function.
	(e_day_view_init, e_day_view_destroy, e_day_view_do_key_press):
	use the ECalView's default_category.

	* gui/e-week-view.[ch] (e_week_view_set_default_category):
	removed obsolete function.
	(e_week_view_init, e_week_view_destroy, e_week_view_do_key_press):