@@ -1,3 +1,12 @@
+2003-10-21  Rodrigo Moya <rodrigo@ximian.com>
+
+	* pcs/cal-backend-file.c: store recurrences per object.
+	(free_object): free correctly the CalBackendFileObject's
+	contained in 'priv->comp_uid_hash'.
+	(lookup_component, check_dup_uid, add_component, remove_component,
+	match_object_sexp):
+	adapted to changes in comp_uid_hash.
+	
 2003-10-20  Rodrigo Moya <rodrigo@ximian.com>
 
 	* gui/gnome-cal.[ch] (gnome_calendar_add_event_uri): renamed
